# qpass-qt5

./: App.cpp  App.h  Benchmark.cpp  Benchmark.h  CMakeLists.txt  ChangeLog  CsvFormat.cpp  CsvFormat.h  DataAccess.cpp  DataAccess.h  DataModel.cpp  DataModel.h  INSTALL  MainWindow.cpp  MainWindow.h  MainWindow.ui  PredefinedSettings.cpp  PredefinedSettings.h  QPass.cpp  QPass.h  README  TrayIcon.cpp  TrayIcon.h  UpdateChecker.cpp  UpdateChecker.h  about.cpp  about.h  database.cpp  database.h  export-dialog.cpp  export-dialog.h  import-dialog.cpp  import-dialog.h  main.cpp  password-dialog.cpp  password-dialog.h  project.xmi  qpass-config.h.cmake  qpass.desktop  qpass.desktop.cmake  (+4 more)
dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ColumnOrganizationDialog.cpp  ColumnOrganizationDialog.h  ColumnOrganizationDialog.ui  DatabaseExportDialog.cpp  DatabaseExportDialog.h  DatabaseExportDialog.ui  DatabaseImportDialog.cpp  DatabaseImportDialog.h  DatabaseImportDialog.ui  NewDatabaseDialog.cpp  NewDatabaseDialog.h  NewDatabaseDialog.ui  NewDatabaseDialogPage1.ui  NewDatabaseDialogPage2.ui  NewPasswordDialog.cpp  NewPasswordDialog.h  NewPasswordDialog.ui  OtherDatabaseDialog.cpp  OtherDatabaseDialog.h  OtherDatabaseDialog.ui  PasswordChangeDialog.cpp  PasswordChangeDialog.h  PasswordChangeDialog.ui  PasswordGeneratorDialog.cpp  PasswordGeneratorDialog.h  PasswordGeneratorDialogPage1.ui  PasswordGeneratorDialogPage3.ui  PasswordViewer.cpp  PasswordViewer.h  PasswordViewer.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  PreviousPasswordDialog.cpp  PreviousPasswordDialog.h  PreviousPasswordDialog.ui  UpdateCheckerDialog.cpp  (+2 more)
images/: qpass.qrc
locale/: qpass_pl_PL.ts
translations/: it_IT.ts  nl_NL.ts  pl_PL.ts
